hphp/hack/test/typecheck/is_expression/dynamic.php.exp
File "dynamic.php", line 5, characters 16-17:
Invalid argument (Typing[4110])
File "dynamic.php", line 10, characters 21-23:
Expected int
File "dynamic.php", line 4, characters 13-19:
But got dynamic
